feat: make auction indicative endpoint database first
